css/main.css
/* === Fonts === */

@font-face {
    font-family: 'FiraSans-Light';
        src: url('/css/FiraSans-Light.ttf') format('truetype');
    font-style: normal;
}

@font-face {
    font-family: 'FiraSans-LightItalic';
        src: url('/css/FiraSans-LightItalic.ttf') format('truetype');
    font-style: italic;
}

/* === Color Set === */

/*
 * Aufhebung blue:          #2bfed2 - rgb(43, 254, 210)
    > complémentaire:
        Rouge écarlate:     #fe2b57 - rgb(254, 43, 87)
    > triade:
        Mauve:              #d22bfe - rgb(210, 43, 254)
        Ocre clair:         #fed22b - rgb(254, 210, 43)
    > tetrade:
        Jaune-vert:         #c1fe2b - rgb(193, 254, 43)
        Bleu-mauve:         #692bfe - rgb(105, 43, 254)
        Rouge écarlate:     #fe2b57 - rgb(254, 43, 87)
 * Dark Blue     : #3D9986 - rgb(61, 153, 134)
 * Green         : #00FF39 - rgb(0, 255, 57)
 * Orange        : #FF4300 - rgb(255, 67, 0)
 * Dark Orange   : #B22F00 - rgb(178, 47, 0)
 * Salmon        : #FE7C6B - rgb(254, 124, 107)
 * Red           : #CB0E21 - rgb(203, 14, 33)
 * Pink          : #FF40B3 - rgb(255, 64, 179)
 * Violet        : #C214CC - rgb(194, 20, 204)
*/

/* === General === */
body {
  font-family: FiraSans-Light, "Courier New";
  font-size: 11pt;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  background: white; /* For browsers that do not support gradients */
  background: -webkit-linear-gradient(left, whitesmoke, white, whitesmoke); /* For Safari 5.1 to 6.0 */
  background: -o-linear-gradient(right, whitesmoke, white, whitesmoke); /* For Opera 11.1 to 12.0 */
  background: -moz-linear-gradient(right, whitesmoke, white, whitesmoke); /* For Firefox 3.6 to 15 */
  background: linear-gradient(to right, whitesmoke, white, whitesmoke); /* Standard syntax */
}

.page-layout {
  max-width: 1500px;
  min-width: 600px;
}

/* == Header == */
.header {
  margin: 0;
  padding: 0;
}

.logo {
  display: flex;
  justify-content: center;
}


/* == Navigation == */
nav {
  align-items: center;
  display: flex;
  height: 40px;
  justify-content: center;
  margin: auto;
  padding: 0;
  width: 80%;
  border-bottom: 1px solid rgba(0,0,0,.1);
}

.menu {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.menu-item {
  padding: 0;
  margin-left: 10px;
  margin-right: 10px;
}

.menu-item a {
  color: black;
  text-decoration: none;
}

.menu-item a:hover {
  color: #fe2b57;
}

.menu-item__active a{
  color: #fe2b57;
}

/* == Pagination == */

.pagination ul {
  display: flex;
  flex-wrap: nowrap;
  justify-content: center;
  list-style-type: none;
}

.pagination-item {
  margin-left: 10px;
  margin-right: 10px;
  padding: 0;
}

.pagination-item a {
  color: black;
  text-decoration: None;
  font-weight: bold;
}

.pagination-item a:hover {
  color: #fe2b57;
}

/* == Footer == */
footer {
  border-top: 1px solid rgba(0,0,0,.1);
  margin-top: 30px;
}

footer p {
  text-align: center;
}

/* === Blog Main Page === */

/*
.post-card-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  margin: auto;
  margin-top: 20px;
  padding: 0;
  width: 80%;
}

.post-card {
  border: 1px solid rgba(0,0,0,.15);
  border-radius: 10px;
  max-width: 435px;
  margin: 20px;
  padding: 10px;
}

.post-card a {
  color: black;
  text-decoration: none;
  display: block;
}

.post-card a:hover {
  color: #B22F00;
}

.post-card-title__center {
  border-radius: 10px 10px 0px 0px;
  padding: 0;
  margin-top: -30px;
  margin-left: -10px;
  margin-right: -10px;
}

.blue-background {
  background-color: rgba(43, 254, 210, 0.5);
}

.red-background {
  background-color: rgba(178, 47, 0, 0.5);
}

.post-card-title h2 {
  padding: 10px;
}

.post-card-type {
  font-size: 0.8em;
  color: rgba(0, 0, 0, 0.8);
}

.post-card-author {
  font-style: italic;
}

.post-card-date {
  font-style: italic;
  color: #8A7F8D;
  margin-top: -10px;
  margin-bottom: 10px;
}

.post-card-excerpt {
  text-align: justify;
  padding: 0;
  margin-bottom: 10px;
}

*/

.post-card-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  margin: auto;
  margin-bottom: 40px;
  margin-top: 20px;
  max-width: 1000px;
}

.post-card {
  border: 1px solid rgba(0, 0, 0, 0.5);
  box-sizing: border-box;
  height: 260px;
  margin: 10px;
  width: 450px;
  min-width: 450px;
  background-color: whitesmoke;
  box-shadow: 0 0 0.7em grey;
}

.post-card:hover {
  background-color: white;
  box-shadow: 0 0 1em black;
}


.post-card-link {
  box-sizing: border-box;
  color: black;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  height: 100%;
  text-decoration: none;
  width: 100%;
}

.post-card-picture {
  background-origin: border-box;
  background-position: 50% 50%;
  background-size: cover;
  box-sizing: border-box;
  display: inline-block;
  height: 100%;
  overflow: hidden;
  width: 200px;
}

.post-card-text {
  width: 50%;
  padding: 12px;
}

.post-card-title {
  font-size: 125%;
  font-weight: bold;
}

.post-card-icon {
  color: rgb(178, 47, 0);
  font-size: 150%;
}

.post-card-subtitle {
  font-weight: normal;
}

.post-card-date {
  font-size: 110%;
  color: rgba(0, 0, 0, 0.8);
}

/* === Blog Post ===*/
.post {
  margin: auto;
  min-width: 680px;
  padding: 0;
  width: 50%;
}

.post-header {
  margin-bottom: 20px;
  text-align: center;
}

.post-subtitle {
  color: rgba(0, 0, 0, 0.7);
  font-size: 133%;
  font-style: italic;
}

.post-author {
  font-style: italic;
  font-weight: bold;
  color: rgba(178, 47, 0, 1);
}

.post-reference {
  text-align: right;
  font-size: 140%;
  font-style: oblique;
  margin: 20px;
}

.header-image {
  margin: 0;
  padding: 0;
}

.header-image img {
  height: auto;
  width: 100%;
}

.post-content {
  text-align: justify;
  line-height: 1.5em;
  margin-top: 50px;
}

.post-pagination {
  margin-top: 40px;
}

.post-content blockquote {
  font-style: italic;
  font-size: 120%;
/*color: rgba(50,50,50,1);*/
  color: rgba(178, 47, 0, 1);
/*margin-bottom: 30px;
/*margin-left: auto;
/*margin-right: auto;
/*margin-top: 30px;
/*width: 80%;
/*font-size: 133%;*/
  margin-top: 0;
  margin-bottom: 0;
  margin-left:  3em;
  margin-right: 3em;
  padding: 0;
}

/* Author and source of a post quote. */
/*TODO ::: Tue 17 Oct 2017 06:05:42 PM CEST
 * must use a note de bas de page instead */ 
.post-content .quote-meta {
  color: black;
  font-size: 110%;
  text-align: right;
}

.post-content sup a{
    color: #B22F00;
    font-weight: bold;
}

/* Formattage différent pour section Footnotes, mais comme il parse pas le MD dans les balises bah en fait ça fait chier,
dommage c'était bien */
.footnotes {
  font-size: 90%;
  text-indent: 3em;
}

.reversefootnote {
    margin-left: 2em;
    /*TODO ::: Tue 17 Oct 2017 06:26:07 PM CEST 
     * couleur bleu (default) ou pas?*/
    color: grey;
    font-size: 120%;
}

/*TODO ::: Tue 17 Oct 2017 06:23:55 PM CEST 
 * Useless?*/
.footnote-number {
  margin-left: 3em;
  color: #B22F00;
  font-weight: bold;
}


/* == Video post == */

.youtube-video {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
}


/* === Bibliothèques ===*/
.author-card-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  margin: auto;
  margin-top: 30px;
  padding: 0;
  width: 80%;
}

.author-card {
  margin-left: 10px;
  margin-right: 10px;
  padding: 0px;
}

.author-card a {
  color: black;
  text-decoration: none;
}

.author-card p{
  max-width: 160px;
  text-align: center;
}

.library-content {
  margin-bottom: 50px;
  margin-top: 30px;
}

.library-content h2 {
  text-align: center;
}

.text-list {
/*background-color: rgb(43, 254, 210, 0.7);*/
  background-color: rgb(43, 254, 210, 0.3);
  margin-bottom: 20px;
  padding: 10px;
}

.text-list:nth-child(odd) {
/*background-color: rgba(255, 67, 0, 0.7);*/
  background-color: rgba(254, 210, 43, 0.3);
}

.text-list h3 {
  margin-bottom: 5px;
  margin-top: -2px;
}

.text-list a {
  text-decoration: None;
  color: black;
}

.text-list a:hover {
/*color: #FE2B57;*/
  color: #63017e; /*mauve + foncé*/
}

.text-list h3:target::before {
  content: "►";
  color: rgba(0, 0, 0, 0.5);
  margin-right: .25em;
  
}

